# pdfTitleParser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_test.yml  lint.yml
src/: main.rs
src/extractor/: mod.rs
src/store/: mod.rs
