[package]
name = "bibliography_parser"
version = "0.1.0"
edition = "2021"
authors = ["D4ykoo"]
license = "MIT"
license-file = "./LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
notify = "6.1.1"
pdf = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.11"
